# schemas.py
@@ -20,7 +20,7 @@ class SignupRequest(Schema):
     password = fields.Str()
 
 
-class UserCreatedResponse(Schema):
+class OkResponse(Schema):
     message = fields.Str()
 
 
@@ -29,8 +29,9 @@ class ErrorResponse(Schema):
 
 
 class CollectionCardResponse(Schema):
+    card_id = fields.Int()
     name = fields.Str()
-    url = fields.Str()
+    url = fields.Url()
     count = fields.Int()
     price = fields.Int()
     is_marketed = fields.Bool()
@@ -45,3 +46,47 @@ class UserResponse(Schema):
     cards = fields.Int()
     credits = fields.Int()
     name = fields.Email()
+
+class UserAdminResponse(Schema):
+    id = fields.Int()
+    name = fields.Email()
+    credits = fields.Int()
+    collection = fields.List(fields.Nested(CollectionCardResponse))
+
+class UsersAdminResponse(Schema):
+    current = fields.Str()
+    users = fields.List(fields.Nested(UserAdminResponse))
+
+class CardAdminResponse(Schema):
+    id = fields.Int()
+    name = fields.Str()
+    url = fields.Url()
+
+class CardsAdminResponse(Schema):
+    total = fields.Str()
+    cards = fields.List(fields.Nested(CardAdminResponse))
+
+class SellUserCardRequest(Schema):
+    user_id = fields.Int()
+    card_id = fields.Int()
+    price = fields.Int()
+
+class SellCardRequest(Schema):
+    card_id = fields.Int()
+    price = fields.Int()
+
+class CancelSellUserCardRequest(Schema):
+    user_id = fields.Int()
+    card_id = fields.Int()
+
+class CancelSellCardRequest(Schema):
+    card_id = fields.Int()
+
+class BuyUserCardRequest(Schema):
+    buyer_id = fields.Int()
+    seller_id = fields.Int()
+    card_id = fields.Int()
+
+class BuyCardRequest(Schema):
+    seller_id = fields.Int()
+    card_id = fields.Int()
